# Lifecycle_Project

./: README.md  set_state.sh  start.sh  stop.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/life_manager/lib/life_manager/: life_manager_exe
install/life_manager/share/life_manager/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/life_manager/share/life_manager/cmake/: life_managerConfig-version.cmake  (+1 more)
install/node_1/lib/node_1/: node_1_exe
install/node_1/share/node_1/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/node_2/lib/node_2/: node_2_exe
install/node_2/share/node_2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/: base_talker_node.cpp  signal_handler.hpp
src/life_manager/: CMakeLists.txt  package.xml
src/life_manager/config/: params.yaml
src/life_manager/include/: life_manager.hpp
src/life_manager/launch/: life_manager_launch.py
src/life_manager/src/: life_manager.cpp
src/node_1/: CMakeLists.txt  package.xml
src/node_1/include/: node_1.hpp
src/node_1/launch/: node_1_launch.py
src/node_1/src/: node_1.cpp
src/node_2/: CMakeLists.txt
src/node_2/config/: params.yaml
src/node_2/include/: node_2.hpp
src/node_2/launch/: node_2_launch.py
src/node_2/src/: node_2.cpp
(+23 files in other folders)
